# TRSS-Plugin

./: .gitignore  README.md  config_demo.yaml  index.js  package.json  pyproject.toml
Apps/: AliyunPan.js  BaiduPan.js  ChatGPT.js  File.js  GenshinVoice.js  Markdown.js  QRCode.js  RealESRGAN.js  RemBG.js  RemoteCommand.js  Script.js  SourceCode.js  SystemInfo.js  Voice.js  miHoYoLogin.js
Model/: config.js  file.js
Python/: main.sh  miHoYoLogin.py
Resources/Code/: Code.css  Code.html
Resources/Markdown/: Markdown.css  Markdown.html
Resources/SourceCode/: SourceCode.css  SourceCode.html  codeTheme.css
Resources/common/: common.css
apps/: GenshinVoice.js  RealESRGAN.js  RemoteCommand.js  SystemInfo.js
model/: uploadRecord.js
