[tool.poetry]
name = "TRSS-Plugin"
version = "1.0.0"
description = "TRSS Yunzai Plugin"
authors = ["时雨🌌星空 <Time.Rain.Star.Sky@Gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.7.1"
torch = "^2.0.0"
scipy = "^1.10.1"
librosa = "^0.10.0.post2"
unidecode = "^1.3.6"
phonemizer = "^3.2.1"
pypinyin = "^0.48.0"
pypinyin-dict = "^0.5.0"
jieba = "^0.42.1"
cython = "^0.29.34"
basicsr = "^1.4.2"
facexlib = "^0.3.0"
gfpgan = "^1.3.8"
numpy = "1.23.5"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
flask = "^2.2.3"
rembg = { version = "^2.0.32", python = "<3.11" }
cn2an = "^0.5.19"
openjtalk = { version = "^0.3.0.dev3", markers = "platform_machine == 'x86_64'" }
llvmlite = "^0.40.0"

[[tool.poetry.source]]
name = "BFSU"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
