[tool.poetry]
name = "TRSS-Plugin"
version = "1.0.0"
description = "TRSS Yunzai Plugin"
authors = ["TimeRainStarSky <Time.Rain.Star.Sky@Gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.7.2"
torch = "^2.0.1"
scipy = "^1.11.1"
librosa = "^0.10.0.post2"
unidecode = "^1.3.6"
phonemizer = "^3.2.1"
pypinyin = "^0.49.0"
pypinyin-dict = "^0.6.0"
jieba = "^0.42.1"
cython = "^3.0.0"
basicsr = "^1.4.2"
facexlib = "^0.3.0"
gfpgan = "^1.3.8"
numpy = "^1.24.4"
opencv-python = "^4.8.0.74"
pillow = "^10.0.0"
torchvision = "^0.15.2"
tqdm = "^4.65.0"
flask = "^2.3.2"
rembg = "^2.0.50"
cn2an = "^0.5.20"
openjtalk = { version = "^0.3.0.dev3", markers = "platform_machine == 'x86_64'" }
llvmlite = "^0.40.1"
ruamel-yaml = "^0.17.32"

[[tool.poetry.source]]
name = "BFSU"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
priority = "primary"

[[tool.poetry.source]]
name = "TUNA"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"
