[tool.poetry]
name = "TRSS-Plugin"
version = "1.0.0"
description = "TRSS Yunzai Plugin"
authors = ["TimeRainStarSky <Time.Rain.Star.Sky@Gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.9.0"
torch = "^2.3.0"
scipy = "^1.13.0"
librosa = "^0.10.2.post1"
unidecode = "^1.3.8"
phonemizer = "^3.2.1"
pypinyin = "^0.51.0"
pypinyin-dict = "^0.8.0"
jieba = "^0.42.1"
cython = "^3.0.10"
facexlib = "^0.3.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
torchvision = "^0.18.0"
tqdm = "^4.66.4"
flask = "^3.0.3"
rembg = "^2.0.56"
cn2an = "^0.5.22"
openjtalk = { version = "^0.3.0.dev3", markers = "platform_machine == 'x86_64'" }
ruamel-yaml = "^0.18.6"

[[tool.poetry.source]]
name = "BFSU"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
priority = "primary"

[[tool.poetry.source]]
name = "Aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "supplemental"
